# agent-skills

./: .gitignore  AGENTS.md  CMDS-README.md  CONTRIBUTING.md  README.md  skills-lock.json
skills/accelint-ac-to-playwright/evals/: .env.example  .gitignore  DESIGN.md  README.md  _noise_filter.py  _reporter.py  conftest.py  litellm_judge.py  pyproject.toml  runner.py
skills/accelint-ac-to-playwright/evals/metrics/: _json_extraction.py  assessment_quality.py  assumptions.py  blatant_errors.py  clarification_needed.py  goal_accuracy.py  hallucinated_assertions.py  json_completeness.py  permission_compliance.py  plan_adherence.py  plan_comparison.py  plan_semantic.py  plan_structural.py  step_efficiency.py  target_coverage.py  task_completion.py
skills/accelint-ac-to-playwright/evals/results/: comprehensive-action-and-assertion-coverage.json  run-20260607T170724.290004+0000.json  run-20260607T171254.071144+0000.json  run-20260607T171852.828964+0000.json  run-20260607T172613.658622+0000.json  run-20260607T175313.189454+0000.json  run-20260607T180101.522580+0000.json  run-20260608T151833.564915+0000.json  run-20260608T152609.501200+0000.json  run-20260608T172242.913631+0000.json  run-20260608T181213.406335+0000.json  run-20260608T182537.626751+0000.json  run-20260608T212533.740035+0000.json  run-20260608T213543.908310+0000.json  run-20260608T213746.236277+0000.json  run-20260608T215339.969987+0000.json
skills/accelint-ac-to-playwright/evals/tests/: test_assessment_mode.py  test_compare_outputs.py  test_conversion_mode.py  test_correctness_metrics_regressions.py  test_efficiency_metrics_regressions.py  test_infra_units.py  (+6 more)
(+631 files in other folders)
